--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 django==4.1.3
 channels==4.0.0
-channels-redis==4.0.0
+channels_redis==4.0.0
 daphne==4.0.0
-django-redis==3.1.6
+#django-redis==3.1.6
